@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix TAP test on windows
+    - Fix math errors in table indentation
+
 1.302157  2019-01-08 14:10:29-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix minor typos and missing doc sections
